# dva_manager

./: .gitignore  CMakeLists.txt
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/Analyser/: Analyser.cpp  Analyser.h  Canvas.cpp  Canvas.h  FFTBuffer.cpp  FFTBuffer.h  ResponseCurve.cpp  ResponseCurve.h  Spectrogram.cpp  Spectrogram.h
source/Controls/: ControlsContainer.cpp  ControlsContainer.h
source/Controls/Compressor/: CompressorControls.cpp  CompressorControls.h  CompressorProperties.h
source/Controls/EQ/: CutBand.cpp  CutBand.h  EqControls.cpp  EqControls.h  EqProperties.h  PeakBand.cpp  PeakBand.h  SlopeGroup.cpp  SlopeGroup.h
source/FileInfo/: CustomGridCell.cpp  CustomGridCell.h  FileInfo.cpp  FileInfo.h
source/FilterDsp/: FilterDsp.cpp  FilterDsp.h
source/FolderView/: FolderButton.cpp  FolderButton.h  FolderSelector.cpp  FolderSelector.h
source/LUFS/: LufsFilter.cpp  LufsFilter.h
source/MainView/: MainView.cpp  MainView.h
source/Menu/: DvaListBox.cpp  DvaListBox.h
source/Meter/: Meter.cpp  Meter.h  MeterGroup.cpp  MeterGroup.h  MeterValueLabel.cpp  MeterValueLabel.h  ValueHolder.cpp  ValueHolder.h
source/Transport/: TransportBar.cpp  TransportBar.h  TransportButton.cpp  TransportButton.h
source/Utilities/: DvaInfo.h  GlobalConstants.h  GlobalLookAndFeel.cpp  GlobalLookAndFeel.h  TailwindColours.h
source/Waveform/: GraphicWaveform.cpp  GraphicWaveform.h  PositionMarker.cpp  PositionMarker.h  WaveformContainer.cpp  WaveformContainer.h
source/Widgets/: AnalyserNode.cpp  AnalyserNode.h  CompRotary.cpp  CompRotary.h  ControlLabel.h  DbMarkers.cpp  DbMarkers.h  EnablementButton.cpp  EnablementButton.h  EqRotary.cpp  EqRotary.h  FileButton.cpp  FileButton.h  FreqMarkers.cpp  FreqMarkers.h  PowerButton.cpp  PowerButton.h  RadioButton.cpp  RadioButton.h  RotaryBase.cpp  RotaryBase.h  RotaryTypes.h  ViewButton.cpp  ViewButton.h
